Aula 05-Alteração do nome chamado pelo JSF

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,8 +9,8 @@
 
     <f:view>
         <h:outputLabel value="Hello, world"/> <br/>
-        <h:outputLabel value="#{estudandeRegistroBean.nome} "/>
-        <h:outputLabel value="#{estudandeRegistroBean.sobrenome}"/>
+        <h:outputLabel value="#{estudanteRegistro.nome} "/>
+        <h:outputLabel value="#{estudanteRegistro.sobrenome}"/>
     </f:view>
 
 </html>
