--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,11 +6,15 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:body>
 
     <f:view>
         <h:outputLabel value="Hello, world"/> <br/>
         <h:outputLabel value="#{estudanteRegistro.nome} "/>
         <h:outputLabel value="#{estudanteRegistro.sobrenome}"/>
+        <br/>
+        <h:outputLabel value="#{estudanteRegistro.nota1 eq estudanteRegistro.nota2}"/>
     </f:view>
 
+</h:body>
 </html>
