--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,25 +5,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
 <h:body>
+    <p:importEnum type="br.com.davi.devdojo.model.enums.Turno"
+                  var="Turno" allSuffix="ALL_ENUM_VALUES" />
+    Development: \#{JsfProjectStages.Development}
 
     <f:view>
         <h:outputLabel value="Hello, world"/> <br/>
-        <h:outputLabel value="#{estudanteRegistro.nome} "/>
-        <h:outputLabel value="#{estudanteRegistro.sobrenome}"/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.nome} "/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.sobrenome}"/>
         <br/>
-        <h:outputLabel value="#{estudanteRegistro.nota1 eq estudanteRegistro.nota2}"/><br/>
-        <h:outputLabel value="#{estudanteRegistro.nota2 == estudanteRegistro.nota3}"/><br/>
-        <h:outputLabel value="#{estudanteRegistro.nota1 le estudanteRegistro.nota2 or estudanteRegistro.nota1 lt estudanteRegistro.nota3}"/><br/>
-        <h:outputLabel value="#{estudanteRegistro.nota1 eq 0 ? 'ZERO' : 'DIFERENTE DE ZERO'}"/><br/>
-        <h:outputLabel value="#{estudanteRegistro.nota1 = 10.0}"/><br/>
-        <h:outputLabel value="Agora a nota 1 do Estudante é #{estudanteRegistro.nota1} --> PARA QUE ACONTEÇA A MUDANÇA
+        <h:outputLabel value="#{estudanteRegistro.estudante.nota1 eq estudanteRegistro.estudante.nota2}"/><br/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.nota2 == estudanteRegistro.estudante.nota3}"/><br/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.nota1 le estudanteRegistro.estudante.nota2 or estudanteRegistro.estudante.nota1 lt estudanteRegistro.estudante.nota3}"/><br/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.nota1 eq 0 ? 'ZERO' : 'DIFERENTE DE ZERO'}"/><br/>
+        <h:outputLabel value="#{estudanteRegistro.estudante.nota1 = 10.0}"/><br/>
+        <h:outputLabel value="Agora a nota 1 do Estudante é #{estudanteRegistro.estudante.nota1} --> PARA QUE ACONTEÇA A MUDANÇA
         DA NOTA, PRECISAMOS DE UM FORMULÁRIO PARA FAZER O POST DA NOTA"/><br/>
 <!--        PALAVRAS RESERVADAS NO JSF PARA OPERAÇÕES LÓGICAS: -->
 <!--        and, or, not, eq, ne (not equals), lt, gt, le, ge, true, false, null, instanceof, empty, div e mod-->
-
-
+        <h:outputLabel value="#{estudanteRegistro.estudante.turno eq Turno.MATUTINO}"/><br/>
 
     </f:view>
 
