--- a/src/main/webapp/index2.xhtml
+++ b/src/main/webapp/index2.xhtml
@@ -6,6 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel value="CHEGAMOS NA PÁGINA 02"/>
+    <h:outputLabel value="CHEGAMOS NA PÁGINA 02"/><br/>
+    <h:outputText value="#{testeRequestBean.bairroSelecionado}"/>
 </f:view>
 </html>
